...
        case recommendation
    }

    // MARK: - Constants

    private enum Constants {
        static let failText = "Упс!"
        static let failMessageText = "Функционал в разработке :("
        static let okText = "Ок"
    }

    // MARK: - Visual Components

    private lazy var detailInfoFilmTableView = {
        let tableView = UITableView()
...
